--- a/ICD0007_LAB6/styles/courses.css
+++ b/ICD0007_LAB6/styles/courses.css
@@ -6,7 +6,7 @@ body{
   align-items: center;
 }
 
-form, #display {
+#display {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -45,4 +45,16 @@ a {
   text-align: left;
   background-color: black;
   color: white;
+}
+
+#form-div{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #4F5B93;
+  margin: 20px;
+  padding: 10px;
+  border: #000 10px solid;
+  border-radius: 5px;
 }
